--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,8 @@
     <string name="title_activity_traps_">Traps_Activity</string>
     <string name="title_activity_troops_">Troops_Activity</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_normal_troops">NormalTroops</string>
+    <string name="title_activity_darktroops">Darktroops</string>
+    <string name="title_activity_heroes">Heroes</string>
 
 </resources>
